--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,7 +16,9 @@
     <a href="/cheese/add">Add Cheese</a>  |
     <a href="/cheese/remove">Remove</a>  |
     <a href="/category">List Categories</a>  |
-    <a href="/category/add">Add Category</a>
+    <a href="/category/add">Add Category</a>  |
+    <a href="/menu/">List Menus</a>  |
+    <a href="/menu/add">Add Menu</a>
 </nav>
 
 </body>
