CheeseMVC Persistent is complete through part 3

--- a/src/main/resources/templates/cheese/remove.html
+++ b/src/main/resources/templates/cheese/remove.html
@@ -3,10 +3,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
-
 <h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
+
+<p th:unless="${cheeses} and ${cheeses.size()}">No cheese to remove</p>
 
 <form method="post">
 
