--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="form-group">
-        <label th:for="category">Category</label>
+        <label th:for="categoryId">Category</label>
         <select name="categoryId">
             <option th:each="category : ${categories}"
                     th:text="${category.name}"
