--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -2,9 +2,7 @@
 <!--suppress ALL -->
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-
 <body class="container">
-
 <h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
@@ -27,6 +25,9 @@
     </tr>
 
 </table>
+
+<p><a href="/cheese/add">Add Cheese</a></p>
+<a href="/cheese/remove">Remove Cheese</a>
 
 </body>
 </html>
