--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,7 +4,6 @@
 <head th:fragment="head">
     <meta charset="UTF-8"/>
     <title th:text="${title}">My Cheeses</title>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -12,13 +11,9 @@
 <body>
 
 <nav th:fragment="navigation">
-    <a href="/cheese">List Cheeses</a>  |
-    <a href="/cheese/add">Add Cheese</a>  |
-    <a href="/cheese/remove">Remove</a>  |
-    <a href="/category">List Categories</a>  |
-    <a href="/category/add">Add Category</a>  |
-    <a href="/menu/">List Menus</a>  |
-    <a href="/menu/add">Add Menu</a>
+    <a href="/cheese">Cheeses</a>  |
+    <a href="/category">Categories</a>  |
+    <a href="/menu/">Menus</a>
 </nav>
 
 </body>
